--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-big-calendar": "^1.15.0",
     "next": "^14.2.16",
     "react": "^18",
     "react-calendar": "^5.1.0",
