--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-big-calendar": "^1.15.0",
     "next": "^14.2.16",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "recharts": "^2.13.3"
